# logkouhai

./: .gitignore  Cargo.toml  build.rs  mx.xy2.dev  upload.sh
migrations/: 20230331103613_initial.sql  20230506110030_google_sheets.sql
src/: commands.rs  main.rs  sheets.rs  utils.rs
src/commands/: export.rs  info.rs  leaderboard.rs  sheets_register.rs  undo.rs  vn.rs
