[package]
name = "logkouhai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
poise = { version = "0.5.5", default-features = false, features = [
    "cache",
    "time",
] }
serenity = { version = "0.11.5", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
], default-features = false }
tokio = { version = "1.28.0", features = ["macros", "rt", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["macros", "chrono", "runtime-tokio-rustls", "sqlite", "offline", "time"] }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"
csv = "1.2.1"
serde = { version = "1.0.162", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json", "serde", "serde_json"] }
once_cell = "1.17.1"
google-sheets4 = "5.0.2"
serde_json = "1.0.96"
anyhow = "1.0.71"
time = "0.3.21"
serde_tuple = "0.5.0"
